styles/main.css
/* Global
   ========================================================================== */

body,
html {
  background-color: #fbf4e1;
  font-family: 'DM Sans', sans-serif;
}

/* Navigation
   ========================================================================== */

.nav-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  padding: 8px;
  height: 50px;
}

.nav-item {
  list-style: none;
  margin-right: 50px;
}

.nav-item:last-of-type {
  margin-right: 0;
}

.nav-link {
  text-decoration: none;
  color: #a9cf38;
  font-size: 30px;
  text-transform: lowercase;
  font-weight: 500;
  transition: all 0.2s ease-out;
}

.nav-link:hover,
.nav-link--active {
  text-transform: lowercase;
  font-weight: bold;
  font-size: 36px;
  text-shadow: 2px 1px black;
  transition: all 0.2s ease-in;
}

/* Page
   ========================================================================== */

.content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.logo {
  max-height: 400px;
  width: auto;
  transition: max-height 1s ease-out;
  margin: 16px 0;
}

.logo-shrink {
  max-height: 250px;
  transition: max-height 1.25s ease-in;
}

.content-text {
  width: 60%;
  margin: 30px 0;
  display: flex;
  justify-content: center;
}

p, a {
  font-size: 20px;
  text-align: justify;
  line-height: 1.5;
  font-weight: 400;
  color: #4b775c;
}

.underline {
  text-decoration: underline;
}

.text-center {
  text-align: center;
}

/* Utils
   ========================================================================== */

.hidden {
  visibility: hidden;
  display: none;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.fade-in {
  animation: fadeIn ease 1.5s;
}

/* Mobile
   ========================================================================== */

@media only screen and (max-width: 768px) {
  .logo {
    max-height: 250px;
  }

  .content-text {
    width: 80%;
  }

  .main-nav {
    padding-bottom: 24px;
  }

  .nav-container {
    display: grid;
    grid-template-rows: repeat(2, minmax(0, 1fr));
    grid-auto-flow: column;
    row-gap: 32px;
  }
}

